# tidy-example

./: CMakeLists.txt  example.cpp
cmake/: CppCheck.cmake
